# portal

./: .gitignore  .vercelignore  Agents.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_ANNOUNCEMENT_v0.12.0.md  ROADMAP.md  SECURITY.md  SUPPORT.md  dist-workspace.toml  g.sh  git-aic.config.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android-release.yml  changelog-updater.yml  npm-publish.yml  release.yml
apps/web/: next.config.ts  package-lock.json  package.json  source.config.ts  task.md
apps/web/app/: globals.css  (+3 more)
archive/local-web/: README.md  index.html
archive/web-portal/: index.html
doc/portal-eng/: cli_struct.md  commands_enum.md  commands_impl.md
docs/: cli-cli.md  faq.md  index.md  install.md  license.md  troubleshooting.md  usage.md
docs/portal-eng/: cli_struct.md  commands_enum.md  commands_impl.md  portal_quarantine_strategy.md  why_clap.md
hiverra-portal/: Cargo.toml  andriod-release.sh  dist-workspace.toml
hiverra-portal/prototypes/tar-stream/receiver/: receiver.rs
hiverra-portal/prototypes/tar-stream/sender/: main.rs  sender.rs
hiverra-portal/prototypes/tcp/: receiver.rs
hiverra-portal/src/: commands.rs  config.rs  history.rs  logger.rs  main.rs  metadata.rs  receiver.rs  select.rs  sender.rs  update.rs
hiverra-portal/src/config/: list.rs  models.rs  set.rs  setup.rs  show.rs
hiverra-portal/src/config/models/: network.rs  storage.rs  user.rs
hiverra-portal/src/discovery/: beacon.rs  listener.rs  protocol.rs
hiverra-portal/src/history/: filter.rs  format.rs  json.rs  mod.rs  storage.rs
hiverra-portal/src/receiver/: get_dir.rs  handshake.rs  history.rs  local_ip.rs  mod.rs  receive_dir.rs  receive_item.rs  receiving_file.rs  stream.rs
hiverra-portal/src/sender/: handshake.rs  history.rs  manifest.rs  mod.rs  send_dir.rs  send_file.rs  send_item.rs  stream.rs
hiverra-portal/wix/: License.rtf  main.wxs
legacy/: index.html
local-web/: server.py
scripts/: update-changelog.js
src/: logger.rs  main.rs  progress.rs  update.rs
src/config/: list.rs  set.rs
src/discovery/: beacon.rs  listener.rs  protocol.rs
src/history/: filter.rs  json.rs  models.rs  storage.rs
src/receiver/: handshake.rs  history.rs  local_ip.rs  stream.rs
src/sender/: handshake.rs  mod.rs  stream.rs
static/: site.webmanifest  style.css
wix/: main.wxs
(+34 files in other folders)
