[package]
name = "hiverra-portal"
version = "0.5.0-alpha"
authors = ["Spectra010s <spectra010s@gmail.com"]
edition = "2024"
repository = "https://github.com/Spectra010s/portal" 
description = "Portal is a lightweight, cross-platform CLI tool built in Rust for sending files and folders between devices instantly."
homepage = "https://github.com/Spectra010s/portal"
license = "MIT"


[package.metadata.wix]
product-name = "Hiverra Portal"
upgrade-guid = "03150A4A-93A4-4E03-BEF5-5D53BBF4A7C7"
path-guid = "BD7DEF88-AE13-482C-B366-DA87D1DCAEF1"
license = true
license-file = "../LICENSE"
eula = false

[[bin]]
name = "portal"
path ="src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
network-interface = "2.0.5"
self_update = { version = "0.42.0", features = ["archive-tar", "compression-flate2"] }
tokio = { version = "1.49.0", features = ["full"] }
inquire = "0.9.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
